--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.2.0",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.10.5",
+    "validator": "^13.11.0"
   },
   "engines": {
     "node": ">=18.16.0"
