--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.2.0",
+    "random-string-alphanumeric-generator": "^0.12.2",
     "sweetalert2": "^11.10.5",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "weighted-random": "^0.1.0"
   },
   "engines": {
     "node": ">=18.16.0"
