--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "random-string-alphanumeric-generator": "^0.12.2",
     "sweetalert2": "^11.10.5",
