--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0",
     "sweetalert2": "^11.10.5",
     "validator": "^13.11.0"
   },
