--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.13",
     "random-string-alphanumeric-generator": "^0.12.2",
     "sweetalert2": "^11.10.5",
     "validator": "^13.11.0",
