--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.2.0",
     "nodemailer": "^6.9.13",
     "random-string-alphanumeric-generator": "^0.12.2",
+    "sanitize-html": "^2.13.0",
     "sweetalert2": "^11.10.5",
     "validator": "^13.11.0",
     "weighted-random": "^0.1.0"
